<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/boton_planetas_padding" >

        <Button
            android:id="@+id/Introduccion"
            style="@style/botonPlaneta"
            android:background="@drawable/boton_fondo_introduccion"
            android:text="@string/Introduccion" />

        <Button
            android:id="@+id/Formacion"
            style="@style/botonPlaneta"
            android:background="@drawable/boton_fondo_formacion"
            android:text="@string/Formacion" />

        <Button
            android:id="@+id/Sol"
            style="@style/botonPlaneta"
            android:background="@drawable/boton_fondo_sol"
            android:text="@string/Sol" />

        <Button
            android:id="@+id/Asteroides"
            style="@style/botonPlaneta"
            android:background="@drawable/boton_fondo_asteroides"
            android:text="@string/Asteroides" />

        <Button
            android:id="@+id/PlanetasEnanos"
            style="@style/botonPlaneta"
            android:background="@drawable/boton_fondo_planetas_enanos"
            android:text="@string/PlanetasEnanos" />

        <Button
            android:id="@+id/ComparacionPlanetas"
            style="@style/botonPlaneta"
            android:background="@drawable/boton_fondo_comparaciones"
            android:text="@string/Comparaciones" />
    </LinearLayout>

</ScrollView>