<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <VideoView
        android:id="@+id/Video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/Boton_Video"
            style="@style/botonVolverVideo.Planetas"
            android:text="@string/tab_video" />

        <Button
            android:id="@+id/Boton_Texto"
            style="@style/botonVolverVideo.Planetas"
            android:text="@string/tab_texto" />

        <Button
            android:id="@+id/Boton_Fotos"
            style="@style/botonVolverVideo.Planetas"
            android:text="@string/tab_fotos" />
    </LinearLayout>

</LinearLayout>